--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,7 @@
 {
   "functions": {
-    "api/index.php": {
-      "runtime": "vercel-php@0.4.0",
-      "excludeFiles": "{test/**}",
-      "memory": 256,
-      "maxDuration": 5
+    "api/*.php": {
+      "runtime": "vercel-php@0.6.0"
     }
   }
 }
